fix: sidebar visibility

--- a/frontend/src/components/ui/sidebar/sidebar.module.scss
+++ b/frontend/src/components/ui/sidebar/sidebar.module.scss
@@ -80,8 +80,8 @@
     }
   }
 }
-@media (min-width: 1050px) {
-  .overlay {
-    display: none;
-  }
-}
+// @media (min-width: 1050px) {
+//   .overlay {
+//     display: none;
+//   }
+// }
